# brHades

./: AUTHORS  CMakeLists.txt  Makefile.in  README.md  athena-start  brHades.sln  configure  configure.ac  pathofAsgard.sln  tradutornpc.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/donation/: README.md
.github/workflows/: Build servers with Clang.yml  analysis_codeql.yml  build_servers_clang.yml  build_servers_cmake.yml  build_servers_gcc.yml  build_servers_modes.yml  build_servers_msbuild.yml  build_servers_packetversions.yml  build_servers_vip.yml  npc_db_validation.yml
conf/: atcommands.yml  char_athena.conf  inter_athena.conf  login_athena.conf  motd.txt
conf/battle/: client.conf  exp.conf  feature.conf  monster.conf
conf/msg_conf/: map_msg.conf  map_msg_por.conf
db/: cash_emotes_db.yml  const.txt  const.yml  map_drops.yml  map_index.txt  mob_db.yml
db/import-tmpl/: map_drops.yml
db/pre-re/: homunculus_db.yml  size_fix.yml
db/re/: homunculus_db.yml  instance_db.yml  item_combos.yml  item_db_etc.yml  item_db_usable.yml  item_group_db.yml  laphine_synthesis.yml  laphine_upgrade.yml  map_drops.yml  mob_db.yml  mob_skill_db.txt  pet_db.yml  quest_db.yml  reputation.yml  size_fix.yml  skill_db.yml  skill_tree.yml  status.yml  stylist.yml
db/translated/: arquivos_processados_pt.txt  database.lua  database_de.lua  database_es.lua  database_id.lua  database_mg.lua  database_pt.lua  database_zh-CN.lua
doc/: achievements.txt  captcha_db.txt  ea_job_system.txt  effect_list.md  item_bonus.txt  item_db.txt  item_group.txt  map_cache.txt  mapflags.txt  md5_hashcheck.txt  mob_avail.txt  mob_db.txt  mob_db_mode_list.txt  mob_item_ratio.txt  mob_skill_db_powerskill.txt  permissions.txt  quest_db.txt  quest_variables.txt  script_commands.txt  script_commands_en.txt
doc/model/: rathena.vpp
npc/: scripts_athena.conf  scripts_warps.conf
npc/airports/: airships.txt  einbroch.txt  hugel.txt  izlude.txt  lighthalzen.txt  rachel.txt  yuno.txt
npc/cities/: alberta.txt  aldebaran.txt
npc/custom/: templodeymir.txt  warper.txt
npc/ep2/: ep2.conf
npc/ep3/: ep3.conf
npc/other/: gold_pc.txt
npc/pre-re/: scripts_athena.conf  scripts_monsters.conf
npc/re/: scripts_athena.conf  scripts_monsters.conf  scripts_warps.conf
sql-files/: main.sql
sql-files/upgrades/: limited_cash_shop.sql  upgrade_20220222_logs.sql  upgrade_20241105.sql  upgrade_20251125.sql  upgrade_20251129.sql
src/: CMakeLists.txt
src/char/: char-server.vcxproj  char.cpp  char.hpp  char_clif.cpp  char_cnslif.cpp  char_logif.cpp  char_mapif.cpp  int_auction.cpp  int_clan.cpp  int_guild.cpp  int_mail.cpp  int_party.cpp  inter.cpp
src/common/: cli.cpp  common-minicore.vcxproj  common.vcxproj  core.cpp  core.hpp  database.cpp  database.hpp  db.cpp  db.hpp  grfio.cpp  malloc.cpp  mmo.hpp  msg_conf.cpp  msg_conf.hpp  nullpo.cpp  nullpo.hpp  packets.hpp  showmsg.cpp  showmsg.hpp  socket.cpp  sql.hpp  strlib.cpp  timer.cpp  utilities.cpp  utilities.hpp
src/config/: core.hpp  packets.hpp  renewal.hpp
src/custom/: defines_pre.hpp
src/login/: account.cpp  login-server.vcxproj  login.cpp  login.hpp  loginchrif.cpp  (+2 more)
src/map/: CMakeLists.txt  Makefile.in  achievement.cpp  atcommand.cpp  battle.cpp  battle.hpp  battleground.cpp  buyingstore.cpp  cashshop.cpp  cashshop.hpp  channel.cpp  chat.cpp  chrif.cpp  chrif.hpp  clan.cpp  clif.cpp  clif.hpp  clif_packetdb.hpp  date.cpp  elemental.cpp  elemental.hpp  emotes.cpp  emotes.hpp  guild.cpp  hades.cppm  hades.ixx  homunculus.cpp  instance.cpp  itemdb.cpp  itemdb.hpp  log.cpp  mail.cpp  map-server-generator.vcxproj  map-server-generator.vcxproj.filters  map-server.vcxproj  map-server.vcxproj.filters  map.cpp  map.hpp  mercenary.cpp  mob.cpp  (+26 more)
src/tool/: CMakeLists.txt  Makefile.in  csv2yaml.cpp  csv2yaml.hpp  csv2yaml.vcxproj  mapcache.cpp  mapcache.vcxproj  readme.md  yaml.hpp  yaml2sql.cpp  yaml2sql.vcxproj  yamlupgrade.cpp  yamlupgrade.hpp  yamlupgrade.vcxproj
tools/: config.pl  convert_monstermode.pl  runserver.bat  translator.py  update.pl
(+87 files in other folders)
